--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ttu_it.freefromelectricshock">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/eicon"
@@ -22,6 +23,8 @@
         <activity android:name=".category"></activity>
         <activity android:name=".activity_four"
             android:label="activity_four"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".FirstActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
